definitive fix: cannot submit enrollement on IE11 as the footer is over the CGU tick

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .page {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
